# backend

./: .gitignore  Cargo.toml  README.md  capwat.example.toml  crates-with-tonic.txt  demo.md  diesel.toml  rust-toolchain.toml  rustfmt.toml  test.toml
api/core/: Cargo.toml
api/core/src/: app.rs  lib.rs
api/server/: Cargo.toml
api/server/src/: lib.rs
api/types/: Cargo.toml
api/types/src/: error.rs  lib.rs
api/types/src/util/: sensitive.rs
core/diesel-impl/: Cargo.toml
core/diesel-impl/src/: any.rs  connection.rs  error.rs  lib.rs  prelude.rs
core/diesel-impl/src/config/: mod.rs
core/diesel-impl/src/internal/: mod.rs  wrapper.rs
core/diesel-impl/src/test/: mod.rs  schema.rs
core/diesel-impl/src/transaction/: builder.rs  error.rs  mod.rs
core/error/: Cargo.toml
core/error/src/: context.rs  error.rs  fmt.rs  lib.rs
core/error/src/ext/: mod.rs
core/error/src/middleware/: mod.rs  std.rs
core/kernel/: Cargo.toml  build.rs
core/kernel/src/: lib.rs
core/kernel/src/config/: grpc.rs  mod.rs
core/kernel/src/domain/: mod.rs  secrets.rs  users.rs
core/kernel/src/driver/: mod.rs  sanitizer.rs  snowflake.rs
core/kernel/src/drivers/: data.rs  mod.rs  storage.rs
core/kernel/src/entity/: mod.rs  secret.rs
core/kernel/src/error/: ext.rs  ext_impl.rs  impls.rs  mod.rs
core/kernel/src/grpc/: impls.rs  mod.rs  proto.rs
core/kernel/src/util/: env.rs  future.rs  io.rs  maybe_generated.rs  mod.rs
core/model/: Cargo.toml
core/model/src/: user.rs
core/tracing/: Cargo.toml
core/tracing/src/logging/: mod.rs
core/types/: Cargo.toml
core/types-common/: Cargo.toml
core/types-common/derive-lib/src/: lib.rs
core/types-common/derive-lib/src/derive/: mod.rs
core/types-common/derive/src/: lib.rs
core/types-common/src/: lib.rs  sensitive.rs
core/types-common/src/error/: mod.rs  serialization.rs
core/types-common/src/id/: marker.rs  mod.rs
core/types-common/src/timestamp/: mod.rs
core/types-v1/: Cargo.toml
core/types-v1/src/users/: mod.rs
core/types/derive/: Cargo.toml
core/types/derive-lib/: Cargo.toml
core/types/src/: form.rs  forms.rs  lib.rs  sensitive.rs  timestamp.rs
core/types/src/error/: code.rs  consts.rs  deserializer.rs  mod.rs  serialization.rs  serialize.rs  traits.rs  unknown.rs
core/types/src/id/: diesel.rs  marker.rs  mod.rs
core/types/src/server_impls/: id.rs  mod.rs  sensitive.rs
core/types/src/timestamp/: diesel.rs
core/utils/: Cargo.toml  build.rs
core/utils/src/: env.rs  lib.rs
core/utils/src/serde_exts/: duration.rs  mod.rs
core/vfs/: Cargo.toml
core/vfs/src/backend/: mod.rs  std.rs
crates/capwat-api-types/: Cargo.toml
crates/capwat-api-types/src/: lib.rs  post.rs
crates/capwat-api-types/src/e2ee/: classic_key.rs  mod.rs  pqc_key.rs
crates/capwat-api-types/src/encrypt/: key.rs  mod.rs
crates/capwat-api-types/src/error/: axum.rs  mod.rs
crates/capwat-api-types/src/routes/: instance.rs  mod.rs  posts.rs  users.rs
crates/capwat-api-types/src/user/: flags.rs  mod.rs  salt.rs
crates/capwat-api-types/src/users/: mod.rs  salt.rs
crates/capwat-api-types/src/util/: base64.rs  mod.rs  timestamp.rs
crates/capwat-crypto/: Cargo.toml
crates/capwat-crypto/src/: argon2.rs  client.rs  derive.rs  lib.rs  salt.rs
crates/capwat-crypto/src/aead/: mod.rs  types.rs
crates/capwat-crypto/src/curve25519/: key.rs  mod.rs
crates/capwat-crypto/src/future/: mod.rs
crates/capwat-crypto/src/hash/: mod.rs
crates/capwat-crypto/src/ml_kem768/: key.rs  mod.rs
crates/capwat-crypto/src/rsa/: mod.rs
crates/capwat-error/: Cargo.toml
crates/capwat-error/src/: context.rs  error.rs  fmt.rs  lib.rs
crates/capwat-error/src/internal/: mod.rs
crates/capwat-error/src/middleware/: mod.rs  std.rs
crates/capwat-macros/: Cargo.toml
crates/capwat-macros/src/: lib.rs  utils.rs
crates/capwat-macros/src/attrs/: main.rs  mod.rs  postgres_query_test.rs  server_test.rs
crates/capwat-macros/src/derive/: config_parts.rs  mod.rs  sea_table.rs
crates/capwat-macros/src/macros/: mod.rs
crates/capwat-model/: Cargo.toml
crates/capwat-model/src/: id.rs  lib.rs
crates/capwat-model/src/diesel/: schema.rs
crates/capwat-model/src/instance_settings/: mod.rs
crates/capwat-model/src/user/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  main.rs  reloader.rs  watcher.rs
crates/common/src/config/: auth.rs  database.rs  mod.rs
crates/common/src/util/: maybe_generated.rs  mod.rs  sensitive.rs
crates/validator/: Cargo.toml
crates/validator-derive/: Cargo.toml
crates/validator/src/: error.rs  lib.rs  std_impl.rs
kernel/: Cargo.toml
kernel/benches/: error.rs
kernel/src/config/: auth.rs  database.rs
kernel/src/db/: pool.rs
kernel/src/error/: ext.rs  impls.rs  mod.rs
kernel/src/services/: data.rs  mod.rs
kernel/src/util/: maybe_generated.rs  mod.rs
main/database/: Cargo.toml
main/database/src/: lib.rs  schema.rs
main/database/src/entity/: user.rs
main/database/src/model/: user.rs
main/database/src/pool/: config.rs  mod.rs
main/users/: Cargo.toml
main/users/src/: lib.rs  main.rs
server/types/: Cargo.toml
server/types/src/: lib.rs  validation.rs
server/types/src/server/: user.rs
server/types/src/users/: register.rs
services/data/: Cargo.toml  build.rs
services/data/src/: client.rs  impl.rs  lib.rs  protobuf.rs  server.rs
services/data/src/config/: defaults.rs  mod.rs
services/data/src/db/: ext.rs  mod.rs  pool.rs
services/http-server/: Cargo.toml
services/http-server/src/: app.rs  lib.rs
services/http-server/src/forms/: login.rs
src/config/: Cargo.toml  auth.rs  database.rs  mod.rs  server.rs
src/config/src/: lib.rs  toml_internals.rs  vars.rs
src/config/src/db_pools/: pool.rs
src/config/src/logging/: console.rs  global.rs  mod.rs  style.rs
src/config/src/server/: auth.rs  hcaptcha.rs  mod.rs
types/: Cargo.toml
types/benches/: error.rs
types/src/: lib.rs  sensitive.rs  timestamp.rs  validation.rs
types/src/error/: codes.rs  mod.rs  serialization.rs
types/src/forms/: login.rs  mod.rs  register.rs
types/src/id/: mod.rs
(+348 files in other folders)
