[workspace]
members = [
    "crates/*",
    "src/config",
    "src/database",
    "src/model",
    "src/server",
    "src/tracing",
]
resolver = "2"

[workspace.package]
authors = ["memothelemo"]
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(release)'] }

[workspace.dependencies]
# core dependencies
capwat-api-types    = { path = "crates/capwat-api-types" }
capwat-crypto       = { path = "crates/capwat-crypto" }
capwat-error        = { path = "crates/capwat-error" }
capwat-macros       = { path = "crates/capwat-macros" }
capwat-utils        = { path = "crates/capwat-utils" }
capwat-vfs          = { path = "crates/capwat-vfs" }

capwat-config       = { path = "src/config" }
capwat-db           = { path = "src/database" }
capwat-model        = { path = "src/model" }
capwat-tracing      = { path = "src/tracing" }

# diagnostics
error-stack         = { git = "https://github.com/memothelemo/error-stack", rev = "01b348a" }
tracing             = "0.1.40"
tracing-subscriber  = { version = "0.3.18", features = ["chrono", "env-filter"] }

# core crates
axum    = { version = "0.7.7", features = ["macros"] }
clap    = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
sqlx    = { version = "*", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio   = { version = "1.41.1", features = ["full"] }

# cryptographic crates
argon2            = "0.5.3"

# useful macros and crates
async-trait       = "0.1.83"
bon               = "3.0.1"
dashmap           = "6.1.0"
getrandom         = "0.2.15"
paste             = "1.0.15"
static_assertions = "1.1.0"
strum             = { version = "0.26.3", features = ["derive"] }
thiserror         = "2.0.0"
zeroize           = "1.8.1"

# types
bitflags    = { version = "2.6.0" }
chrono      = { version = "0.4.38", features = ["serde"] }
url         = { version = "2.5.3", features = ["serde"] }
uuid        = { version = "1.11.0", features = ["v7"] }

# encoding and serialization
base64      = "0.22.1"
hex         = "0.4.3"
serde       = { version = "1.0.214", features = ["derive"] }
serde_with  = "3.9.0"
serde_json  = "1.0.132"

[profile.dev.package.scrypt]
opt-level = 3

[profile.dev.package.base64]
opt-level = 3

[profile.dev.package.block-buffer]
opt-level = 3

[profile.dev.package.cipher]
opt-level = 3

[profile.dev.package.digest]
opt-level = 3

[profile.dev.package.hybrid-array]
opt-level = 3

[profile.dev.package.ml-kem]
opt-level = 3

[profile.dev.package.pbkdf2]
opt-level = 3

[profile.dev.package.rand_core]
opt-level = 3

[profile.dev.package.sha3]
opt-level = 3

[profile.dev.package.salsa20]
opt-level = 3

[profile.dev.package.subtle]
opt-level = 3

[profile.dev.package.zeroize]
opt-level = 3

[profile.dev.package.num-bigint-dig]
opt-level = 3
