[package]
name = "capwat-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bench]]
name = "error"
path = "benches/error.rs"
harness = false

[features]
hot-reloading = []
server-impl = []

[dependencies]
capwat-types = { workspace = true, features = ["server_impl"] }

async-trait.workspace = true
chrono.workspace = true
error-stack.workspace = true
hex.workspace = true
once_cell.workspace = true
percent-encoding.workspace = true
random-string.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing-error.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
validator.workspace = true

# fs-err.workspace = true
# figment.workspace = true
# dotenvy.workspace = true
# notify.workspace = true
# tracing-subscriber.workspace = true

[dev-dependencies]
bencher.workspace = true
serde-value.workspace = true
serde_test.workspace = true
static_assertions.workspace = true

[lints]
workspace = true
