[package]
name = "capwat-server"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capwat-api-types    = { workspace = true, features = ["server"] }
capwat-config       = { workspace = true }
capwat-error        = { workspace = true }
capwat-macros       = { workspace = true }
capwat-model        = { workspace = true }
capwat-tracing      = { workspace = true }
capwat-vfs          = { workspace = true }
capwat-utils        = { workspace = true }

thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
static_assertions.workspace = true
