[package]
name = "capwat-error"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capwat-api-types    = { workspace = true }
error-stack         = { workspace = true }
tracing             = { workspace = true }

[lints]
workspace = true
