[package]
name = "capwat-kernel"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
capwat-types = { workspace = true, features = ["server"] }

async-trait.workspace = true
error-stack.workspace = true
dotenvy.workspace = true
pin-project-lite = "0.2.13"
serde.workspace = true
serde_test.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
tracing-error.workspace = true

# capwat source is actually designed to be independent from
# any platform/dependency/software lock-in but we have no choice.
diesel = { workspace = true, optional = true }

[lints]
workspace = true
