[package]
name = "capwat-kernel"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
main-full = [
    "actix-web",
    "capwat-types-common/main-full",
    "diesel",
    "mime",
    "serde_json",
]

[dependencies]
capwat-types-common = { workspace = true, features = ["full"] }

async-trait.workspace = true
error-stack.workspace = true
dotenvy.workspace = true
pin-project-lite = "0.2.13"
serde.workspace = true
serde_test.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-error.workspace = true

# capwat source is actually designed to be independent from
# any platform/dependency/software lock-in but we have no choice.
actix-web = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
serde_json = { version = "1.0.113", optional = true }

[lints]
workspace = true
