[package]
name = "capwat-model"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capwat-api-types    = { workspace = true, features = ["server"] }

bon.workspace = true
chrono.workspace = true
serde.workspace = true

[lints]
workspace = true
