[package]
name = "capwat-tracing"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capwat-config   = { workspace = true }
capwat-error    = { workspace = true }
capwat-utils    = { workspace = true }

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

json-subscriber = "0.2.2"
tracing-appender = "0.2.3"

[lints]
workspace = true
