[package]
name = "capwat-types-common"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
full = []
main-full = ["full", "diesel"]

[dependencies]
capwat-types-derive = { path = "derive" }

chrono.workspace = true
either.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

diesel = { workspace = true, optional = true }

[dev-dependencies]
serde_test.workspace = true
static_assertions.workspace = true

[lints]
workspace = true
