[package]
name = "capwat-types-v1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
full = ["capwat-types-common/full"]
main-full = ["full", "capwat-types-common/main-full"]

[dependencies]
capwat-types-common.workspace = true
serde.workspace = true

[lints]
workspace = true
