[package]
name = "capwat-types"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
server = []

[dependencies]
capwat-types-derive = { path = "derive" }

chrono.workspace = true
either.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_test.workspace = true
static_assertions.workspace = true

[lints]
workspace = true
