[package]
name = "capwat-crypto"
description = "Implementation of end-to-end encrypted social network for Capwat. It also contains cryptographic related utilities"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# it contains server exclusive features only in Capwat backend repository
server = [
    "pin-project",
    "tokio"
]

[dependencies]
capwat-api-types.workspace = true
capwat-error.workspace = true

base64.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

pin-project = { version = "1.1.7", optional = true }
tokio = { workspace = true, optional = true }

argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
ml-kem = "0.2.1"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
scrypt = "0.11.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# we want to use this library to the web
[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64", target_os = "unknown"))'.dependencies]
getrandom = { version = "=0.2.15", features = ["js"] }

[lints]
workspace = true
