[package]
name = "capwat-error"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde               = { workspace = true, optional = true }

capwat-api-types    = { workspace = true, features = ["server"] }
error-stack         = { workspace = true }
tracing             = { workspace = true }

[lints]
workspace = true
