[package]
name = "capwat-model"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
with_diesel = ["diesel", "diesel-derive-newtype", "diesel-derive-enum"]

[dependencies]
capwat-api-types    = { workspace = true, features = ["server"] }

bon.workspace = true
chrono.workspace = true
serde.workspace = true

diesel = { workspace = true, optional = true }
diesel-derive-newtype = { version = "2.1.2", optional = true }
diesel-derive-enum = { version = "2.1.0", optional = true, features = ["postgres"] }

[lints]
workspace = true
