[package]
name = "capwat-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
hot-reloading = []

[dependencies]
async-trait.workspace = true
error-stack.workspace = true
hex.workspace = true
once_cell.workspace = true
random-string.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
validator.workspace = true

fs-err.workspace = true
figment.workspace = true
dotenvy.workspace = true
notify.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_test.workspace = true
static_assertions.workspace = true

[lints]
workspace = true
