[package]
name = "validator"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["derive"]
derive = ["validator-derive"]

[dependencies]
serde.workspace = true
url.workspace = true
validator-derive = { path = "../validator-derive", optional = true }

[lints]
workspace = true
