[package]
name = "database"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
tls-accept-any-certs = ["capwat-diesel/tls-accept-any-certs"]
tls-accept-native-certs = ["capwat-diesel/tls-accept-native-certs"]

[dependencies]
capwat-diesel.workspace = true
capwat-kernel = { workspace = true, features = ["main-full"] }

diesel.workspace = true
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
once_cell.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
