[package]
name = "capwat-data-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
grpc = []
server = []

[dependencies]
capwat-kernel.workspace = true
error-stack.workspace = true
prost.workspace = true
sqlx.workspace = true
tokio.workspace = true
tonic.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
