[package]
name = "capwat-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
grpc = ["capwat-kernel/grpc", "tonic"]

[dependencies]
capwat-kernel.workspace = true
capwat-types.workspace = true

async-trait.workspace = true
cfg-if.workspace = true
error-stack.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
validator.workspace = true

tonic = { workspace = true, optional = true }

[lints]
workspace = true
