[package]
name = "capwat-http-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]

[dependencies]
capwat-data-service = { path = "../data" }
capwat-kernel.workspace = true

[lints]
workspace = true
