[package]
name = "capwat-http-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]

[dependencies]
async-trait.workspace = true
capwat-kernel.workspace = true
capwat-types.workspace = true
serde.workspace = true
validator.workspace = true

[lints]
workspace = true
