[package]
name = "capwat-config"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capwat-error    = { workspace = true }
capwat-macros   = { workspace = true }
capwat-utils    = { workspace = true }
capwat-vfs      = { workspace = true }

annotate-snippets = "0.11.4"
doku = "0.21.1"
num_cpus = "1.16.0"
toml_edit = { version = "0.22.22", features = ["serde"] }

serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true

[lints]
workspace = true
